stls-https/00-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: single-tls
  labels:
    istio-injection: enabled  # Enable sidecar injection
