stls-https/05-peerauthentication.yaml
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: nginx-peerauthentication
  namespace: single-tls
spec:
  selector:
    matchLabels:
      app: nginx
  mtls:
    mode: DISABLE  # Disable mTLS, allow regular TLS between ingress gateway and nginx pod
