stls-https/02-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: single-tls
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
