stls-https/03-gateway.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: nginx-gateway
  namespace: single-tls
spec:
  selector:
    istio: ingressgateway  # Use the default Istio ingress gateway
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE  # Use SIMPLE TLS mode to terminate HTTPS traffic at the gateway
      credentialName: nginx-gateway-certs  # Reference the Kubernetes secret for the gateway's certificate
    hosts:
    - "*"
