stls-https/06-destinationrule.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: nginx-destinationrule
  namespace: single-tls
spec:
  host: nginx-service
  trafficPolicy:
    portLevelSettings:
    - port:
        number: 80
      tls:
        mode: SIMPLE  # Enable SIMPLE TLS between the ingress gateway and the nginx sidecar
        insecureSkipVerify: true
